# Tau

./: .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .release.toml  .rustfmt.toml  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md  build.rs  com.github.Cogitri.gxi.yml  gxi.ui  meson.build  meson_options.txt  meson_post_install.py  meson_post_install.sh  rustfmt.toml
.ci/: id_ed25519.enc
.github/: ISSUE_TEMPLATE.md
.travis/: id_ed25519.enc  id_rsa  id_rsa.enc
data/: com.github.Cogitri.gxi.appdata.xml.in  com.github.Cogitri.gxi.desktop.in  com.github.Cogitri.gxi.gschema.xml  com.github.Cogitri.gxi.gschema.xml.in  gxi.desktop  meson.build  org.gnome.Tau.appdata.xml.in  org.gnome.Tau.appdata.xml.in.in  org.gnome.Tau.desktop.in  org.gnome.Tau.desktop.in.in  org.gnome.Tau.gschema.xml
data/icons/: meson.build
flatpak/: org.gnome.Tau.yml
hooks/hooks/: pre-commit
po/: LINGUAS  POTFILES.in  bn.po  cs.po  da.po  de.po  es.po  eu.po  fr.po  id.po  meson.build  nb.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh-Hant.po  zh_Hans.po
resources/: gxi.ui
scripts/: cargo.sh  deploy-docs.sh  grabber.sh  make-changelog.sh  new-release.sh  release.sh  run.sh  windows.sh
src/: about_win.rs  clipboard.rs  document.rs  edit_view.rs  editview.rs  error.rs  errors.rs  globals.rs  gxi.glade  key.rs  linecache.rs  macros.rs  main.rs  main_win.rs  pref_storage.rs  prefs_win.rs  proto.rs  request.rs  rpc.rs  scrollable_drawing_area.rs  shared_queue.rs  source.rs  structs.rs  theme.rs  ui.rs  util.rs  xi_thread.rs
src/editview/: Cargo.toml  README.md  build.rs
src/editview/src/: draw_invisible.rs  edit_view.rs  fonts.rs  i18n.rs  lib.rs  main_state.rs  theme.rs  view_item.rs
src/editview/src/ui/: close_tab.glade  context_menu.glade  ev.glade  find_replace.glade  resources.xml
src/gschema-config-storage/: Cargo.toml  README.md
src/gschema-config-storage/src/: errors.rs  macros.rs  pref_storage.rs
src/gxi/: Cargo.toml  build.rs
src/gxi-config-storage/: Cargo.toml  README.md
src/gxi-config-storage/src/: errors.rs  lib.rs  macros.rs  pref_storage.rs
src/gxi-linecache/: Cargo.toml  README.md
src/gxi-linecache/benches/: update.rs
src/gxi-linecache/src/: lib.rs  linecache.rs
src/gxi-peer/: Cargo.toml  README.md
src/gxi-peer/src/: errors.rs  lib.rs  rpc.rs  shared_queue.rs  xi_thread.rs
src/gxi-utils/: Cargo.toml
src/gxi-utils/src/: lib.rs  macros.rs
src/gxi/src/: about_win.rs  errors.rs  frontend.rs  globals.rs  main.rs  main_win.rs  panic_handler.rs  prefs_win.rs
src/gxi/src/ui/: gxi.glade  prefs_win.glade  resources.xml
src/tau/: Cargo.toml  build.rs
src/tau-linecache/: Cargo.toml  README.md
src/tau-linecache/src/: lib.rs  linecache.rs
src/tau-rpc/: Cargo.toml
src/tau-rpc/src/: client.rs  errors.rs  lib.rs  message.rs
src/tau-rpc/src/structs/: alert.rs  config.rs  findreplace.rs  language.rs  line.rs  mod.rs  modifyselection.rs  operation.rs  plugins.rs  position.rs  scroll_to.rs  style.rs  theme.rs  update.rs  view.rs
src/tau/src/: about_win.rs  errors.rs  frontend.rs  functions.rs  globals.rs  main.rs  main_win.rs  main_win_builder.rs  prefs_win.rs  session.rs  shortcuts_win.rs  syntax_config.rs  view_history.rs
src/tau/src/ui/: app.css  prefs_win.glade  prefs_win_handy.glade  resources.xml  shortcuts_win.glade  tau.glade  terminal_context_menu.glade
src/ui/: close_tab.glade  edit_view_frame.glade  ev.glade  find_replace.glade  gxi.glade  prefs_win.glade  statusbar.glade
