[workspace]
members = [
    "src/editview",
    "src/tau",
    "src/gschema-config-storage",
    "src/tau-linecache",
]

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
onig = { git="https://github.com/kornelski/rust-onig", branch="default-bindgen" }
onig_sys = { git="https://github.com/kornelski/rust-onig", branch="default-bindgen" }
