[workspace]
members = [
    "src/editview",
    "src/tau",
    "src/tau-linecache",
    "src/tau-rpc",
]
exclude = [
    "vendor/xi-editor/rust/core-lib",
    "vendor/xi-editor/rust/rpc",
]

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
onig = { git="https://github.com/kornelski/rust-onig", branch="bindgen" }
onig_sys = { git="https://github.com/kornelski/rust-onig", branch="bindgen" }
