option('xi-core',
  description: 'Whether to use a copy of xi-core distributed with Tau or the system\'s one',
  type: 'combo',
  choices: ['auto', 'builtin', 'system'],
)
option('libhandy',
  description: 'Enable libhandy integration, offering mobile view compatibility and generally fancier widgets',
  type: 'combo',
  choices: ['auto', 'enabled', 'disabled'],
)