i18n.gettext(meson.project_name(),
             args: ['--keyword=gettext', '--keyword=ngettext', '--keyword=pgettext', '--keyword=npgettext',
                    '--keyword=ngettext:1,2', '--keyword=pgettext:1c,2', '--keyword=pngettext:1c,2,3',
                    '--keyword=ni18n_f:1,2',
                    ],
             preset: 'glib',
             install: true,
)
