[package]
name = "editview"
version = "0.1.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
edition = "2018"
license = "MIT"
homepage = "https://gxi.cogitri.dev"
repository = "https://gitlab.gnome.org/World/tau"
keywords = ["gxi", "xi", "tau"]
categories = ["GUI", "text-editors"]
description = "The EditView GTK widget, backed by Xi"
readme = "README.md"
build = "build.rs"

[features]
default = []

gtk_v3_22 = ["gtk/v3_22"]

[dependencies]
cairo-rs = ""
crossbeam-channel = "0.3"
enclose = "1"
futures = "0.1"
gdk = ""
gettext-rs = { version="0.4", features=["gettext-system"] }
gio = ""
glib = ""
gschema-config-storage = { path="../gschema-config-storage" }
gtk = { version="0.7", features = ["v3_20"] }
log = "0.4"
pango = { version="", features = ["v1_38"] }
pangocairo = ""
parking_lot = "0.9"
serde = { version="", features = ["derive"] }
serde_json = ""
syntect = ""
tau-linecache = { path="../tau-linecache" }
tokio = ""
unicode-segmentation = "1"
xrl = "0.0.8"
