[package]
name = "gschema-config-storage"
version = "0.3.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
edition = "2018"
categories = ["config"]
keywords = ["gxi", "xi", "glib", "gschema", "tau", "wrapper"]
license = "MIT"
readme = "README.md"
homepage = "https://gxi.cogitri.dev"
repository = "https://gitlab.gnome.org/World/tau"
description = "Comfortability functions for GSettings"

[dependencies]
failure = "0.1"
gio = { version="0.7", features = ["v2_50"]  }
glib = { version="0.8", features = ["v2_44"] }