[package]
name = "gschema-config-storage"
version = "0.3.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
edition = "2018"
categories = ["config"]
keywords = ["gxi", "xi", "glib", "gschema", "tau", "wrapper"]
license = "MIT"
readme = "README.md"
homepage = "https://gxi.cogitri.dev"
repository = "https://gitlab.gnome.org/World/tau"
description = "Comfortability functions for GSettings"

[dependencies]
failure = "0.1"
gio = { git="https://github.com/gtk-rs/gio", features = ["v2_50"]  }
glib = { git="https://github.com/gtk-rs/glib", features = ["v2_44"] }

