[package]
name = "gxi-config-storage"
version = "0.2.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
edition = "2018"
categories = ["config"]
keywords = ["gxi", "xi", "glib", "gschema"]
license = "MIT"
readme = "README.md"
homepage = "https://gxi.cogitri.dev"
repository = "https://github.com/Cogitri/gxi"
description = "gxi's config backend, with comfortability functions for GSettings"

[dependencies]
failure = "0.1"
gio = { git="https://github.com/gtk-rs/gio", features = ["v2_50"]  }
gio-sys = { git="https://github.com/gtk-rs/sys", features = ["v2_50"] }
glib = { git="https://github.com/gtk-rs/glib", features = ["v2_44"] }
glib-sys = { git="https://github.com/gtk-rs/sys", features = ["v2_44"] }
