[package]
name = "gxi"
version = "0.7.0"
authors = ["Rasmus Thomsen <oss@cogitri.dev>"]
homepage = "https://gxi.cogitri.dev"
description = "GTK frontend, written in Rust, for the xi editor"
repository = "https://github.com/Cogtri/gxi"
keywords = ["gxi", "xi"]
categories = ["editor"]
license = "MIT"
edition = "2018"
build = "build.rs"

[features]
default = []

gtk_v3_22 = ["gtk/v3_22"]

[dependencies]
cairo-rs = { git="https://github.com/gtk-rs/cairo" }
cairo-sys-rs = { git="https://github.com/gtk-rs/cairo" }
crossbeam-channel = "0.3"
editview = { path="../editview" }
enclose = "1"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
gdk = { git="https://github.com/gtk-rs/gdk" }
gdk-pixbuf = { git="https://github.com/gtk-rs/gdk-pixbuf" }
gettext-rs = { version="0.4", features=["gettext-system"] }
gio = { git="https://github.com/gtk-rs/gio" }
glib = { git="https://github.com/gtk-rs/glib" }
glib-sys = { git="https://github.com/gtk-rs/sys", features = ["v2_44"] }
gobject-sys = { git="https://github.com/gtk-rs/sys" }
gtk = { git="https://github.com/gtk-rs/gtk", features = ["v3_20"] }
gtk-sys = { git="https://github.com/gtk-rs/sys", features = ["v3_20"] }
gxi-config-storage = { path="../gxi-config-storage" }
human-panic = "1"
log = "0.4"
pango = { git="https://github.com/gtk-rs/pango", features = ["v1_38"] }
pango-sys = { git="https://github.com/gtk-rs/sys", features = ["v1_38"]}
pangocairo = { git="https://github.com/gtk-rs/pangocairo" }
serde = "1"
serde_derive = "1"
serde_json = "1"
syntect = "3"
tokio = "0.1"
xrl = { git="https://github.com/xi-frontend/xrl" }

[dev-dependencies]
cargo-husky = { version="1", default-features = false, features = ["user-hooks"] }
